--- a/admin_panel_with_server/package.json
+++ b/admin_panel_with_server/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-	"watch": "nodemon ./bin/www"
+    "watch": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^3.10.1",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.3"
   }
 }
