--- a/automation_server/package.json
+++ b/automation_server/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"watch": "nodemon ./server.js"
+    "watch": "nodemon ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.10.1"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.3"
   }
 }
