--- a/admin_panel_with_server/package.json
+++ b/admin_panel_with_server/package.json
@@ -7,9 +7,11 @@
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.10.1",
     "nodemailer": "^6.9.13"
