--- a/admin_panel_with_server/admin_panel/public/manifest.json
+++ b/admin_panel_with_server/admin_panel/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#7f98a5"
 }
