Email Function Update. and Front End Update. and automation server update

--- a/admin_panel_with_server/.env
+++ b/admin_panel_with_server/.env
@@ -7,3 +7,5 @@ MYSQL_HOST="127.0.0.1"
 MYSQL_DATABASE_NAME="wsmt00624_testdb"
 MYSQL_USER="root"
 MYSQL_PASSWORD_USER=""
+
+WHATSAPP_GROUP_LINK="https://chat.whatsapp.com/FWtD4mefzEuFiGfmQGeN83"
