--- a/admin_panel_with_server/.env
+++ b/admin_panel_with_server/.env
@@ -1,11 +1,16 @@
 SUPER_ADMIN_USERNAME="asela"
 SUPER_ADMIN_PASSWORD="Asela2001"
 
-SERVER_ACCESS_KEY="Asela2001"
+SERVER_ACCESS_KEY=ca5GK*DdZTP-m+tVAU4!vWFM7h8rYSNQCXEp
 
 MYSQL_HOST="127.0.0.1"
 MYSQL_DATABASE_NAME="wsmt00624_testdb"
 MYSQL_USER="root"
 MYSQL_PASSWORD_USER=""
+
+AUTOMATION_SERVER_HOST=http://localhost:3002
+AUTOMATION_SERVER_ACCESS_KEY=Fr6mt5T@Bsn4DafYgS+yG:jKdb$3kMwhPeU&
+AUTOMATION_SYSTEM_USER=asela
+AUTOMATION_PASSWORD=asela2001
 
 WHATSAPP_GROUP_LINK="https://chat.whatsapp.com/FWtD4mefzEuFiGfmQGeN83"
