--- a/admin_panel_with_server/package.json
+++ b/admin_panel_with_server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-panel-with-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -13,8 +13,12 @@
     "express": "~4.16.1",
     "express-session": "^1.18.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.1",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "sharp": "^0.33.5",
+    "text-to-svg": "^3.1.5",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
