--- a/admin_panel_with_server/.env
+++ b/admin_panel_with_server/.env
@@ -13,4 +13,11 @@ AUTOMATION_SERVER_ACCESS_KEY=Fr6mt5T@Bsn4DafYgS+yG:jKdb$3kMwhPeU&
 AUTOMATION_SYSTEM_USER=asela
 AUTOMATION_PASSWORD=asela2001
 
-WHATSAPP_GROUP_LINK="https://chat.whatsapp.com/FWtD4mefzEuFiGfmQGeN83"
+MAIL_HOST=mail.innentasolutions.com
+MAIL_PORT=465
+MAIL_SECURE=true
+MAIL_USERNAME=projectwsmt00624@innentasolutions.com
+MAIL_PASSWORD=KwHPphm[XBxv
+MAIL_CC_ADDRESS=projectwsmt00624@innentasolutions.com
+
+# WHATSAPP_GROUP_LINK="https://chat.whatsapp.com/FWtD4mefzEuFiGfmQGeN83"
