--- a/admin_panel_with_server/package.json
+++ b/admin_panel_with_server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.1.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
@@ -17,8 +18,10 @@
     "mysql2": "^3.10.1",
     "nodemailer": "^6.9.13",
     "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
     "text-to-svg": "^3.1.5",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
