--- a/admin_panel_with_server/admin_panel/package.json
+++ b/admin_panel_with_server/admin_panel/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
