--- a/admin_panel_with_server/package.json
+++ b/admin_panel_with_server/package.json
@@ -2,6 +2,7 @@
   "name": "admin-panel-with-server",
   "version": "1.0.1",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "start": "node ./bin/www",
     "watch": "nodemon ./bin/www"
