--- a/admin_panel_with_server/admin_panel/package.json
+++ b/admin_panel_with_server/admin_panel/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/x-data-grid": "^7.7.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +19,6 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-pdf": "^9.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
