--- a/admin_panel_with_server/package.json
+++ b/admin_panel_with_server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-panel-with-server",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "private": true,
   "type": "commonjs",
   "scripts": {
@@ -14,10 +14,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.18.0",
+    "fontkit": "^2.0.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.1",
     "nodemailer": "^6.9.13",
+    "pdf-lib": "^1.17.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "text-to-svg": "^3.1.5",
