--- a/admin_panel_with_server/package.json
+++ b/admin_panel_with_server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-sqlite3": "^0.9.15",
     "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
     "debug": "~2.6.9",
